//
// Created by Angelo on 04/01/2025.
//

#ifndef DHMS_PURCHASEOFFERVIEW_H
#define DHMS_PURCHASEOFFERVIEW_H
/*
#include <memory>
#include "controllers/PurchaseOfferController"


class PurchaseOfferView{
private:
    shared_ptr<PurchaseOfferController> controller;

public:
    PurchaseOfferView(shared_ptr<PurchaseOfferController> controller);
};
 */
#endif //DHMS_PURCHASEOFFERVIEW_H
